--- a/step_metadata_crawler.ipynb
+++ b/step_metadata_crawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,10 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "#part 1: https://pumpout.anyhowstep.com/ 으로부터의 데이터 추출: metadata확보\n",
-    "#part 2: piugame.com의 선곡 랭킹으로부터의 데이터 추출: 작곡가/노래 이름 한-영 번역 기능 추가\n"
+    "#part 2: piugame.com의 선곡 랭킹으로부터의 데이터 추출: 작곡가/노래 이름 한-영 번역 기능 추가\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
