--- a/stepchart_df_producer.ipynb
+++ b/stepchart_df_producer.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from piu_utilities import *\n",
-    "\n"
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -87,8 +89,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>kr_song</th>\n",
-       "      <th>kr_composer</th>\n",
+       "      <th>song</th>\n",
+       "      <th>composer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -153,7 +155,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                            kr_song                 kr_composer\n",
+       "                               song                    composer\n",
        "0                              스테이저                         Ras\n",
        "1                            리틀 먼치킨                   Castellia\n",
        "2                      서든 어페어런스 이미지                 Blacklolita\n",
@@ -169,7 +171,7 @@
        "[544 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +196,7 @@
     "    en_composerList.append(item[3][:-1])\n",
     "\n",
     "    \n",
-    "songList_df = pd.DataFrame({'kr_song':kr_songList, 'kr_composer':kr_composerList})\n",
+    "songList_df = pd.DataFrame({'song':kr_songList, 'composer':kr_composerList})\n",
     "                           # , 'en_song':en_songList, 'en_composer':en_composerList})\n",
     "\n",
     "songList_df\n"
@@ -202,51 +204,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#결측값 보정\n",
-    "newest_df['song'] = newest_df['song'].apply(correct_anomalies_custom)"
+    "newest_df['song'] = newest_df['song'].apply(correct_anomalies_custom)\n",
+    "\n",
+    "hello()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Songs in songList that are not in the newest_df\n",
-      "팔랑크스 \"RS2018 edit\"\n",
-      "86 - FULL SONG -\n",
+      "Elements in kr_song in df1 that are not in df2\n",
       " \n",
-      "Songs in newest_df that are not in the songList\n",
-      "['8 6 - FULL SONG -', '팔랑크스 RS2018 edit\"\"']\n"
+      "Elements in song in df2 that are not in df1\n"
      ]
     }
    ],
    "source": [
     "#if there are elements of the songList that are not in the newest_df, print them\n",
-    "print(\"Songs in songList that are not in the newest_df\")\n",
-    "for song in songList_df['kr_song']:\n",
-    "    if song not in newest_df['song'].values:\n",
-    "        print(song)\n",
+    "def check_differences(df1, df2, column1, column2):\n",
+    "    print(f\"Elements in {column1} in df1 that are not in df2\")\n",
+    "    for item in df1[column1]:\n",
+    "        if item not in df2[column2].values:\n",
+    "            print(item)\n",
+    "    print(\" \")\n",
+    "    print(f\"Elements in {column2} in df2 that are not in df1\")\n",
+    "    for item in df2[column2]:\n",
+    "        if item not in df1[column1].values:\n",
+    "            print(item)\n",
     "\n",
-    "print(\" \")\n",
-    "print(\"Songs in newest_df that are not in the songList\")\n",
-    "songlist = []\n",
-    "for song in newest_df['song']: \n",
-    "    if song not in songList_df['kr_song'].values and song not in songlist:\n",
-    "        songlist.append(song)\n",
-    "print(songlist)"
+    "check_differences(songList_df, newest_df, 'kr_song', 'song')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +286,6 @@
        "      <th>rank</th>\n",
        "      <th>song</th>\n",
        "      <th>pattern</th>\n",
-       "      <th>kr_song</th>\n",
        "      <th>kr_composer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -295,7 +295,6 @@
        "      <td>1</td>\n",
        "      <td>애프터 라이크</td>\n",
        "      <td>E01</td>\n",
-       "      <td>애프터 라이크</td>\n",
        "      <td>아이브</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -303,7 +302,6 @@
        "      <td>2</td>\n",
        "      <td>애프터 라이크</td>\n",
        "      <td>N04</td>\n",
-       "      <td>애프터 라이크</td>\n",
        "      <td>아이브</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -311,7 +309,6 @@
        "      <td>3</td>\n",
        "      <td>톰보이</td>\n",
        "      <td>N03</td>\n",
-       "      <td>톰보이</td>\n",
        "      <td>(여자)아이들</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -319,7 +316,6 @@
        "      <td>4</td>\n",
        "      <td>애프터 라이크</td>\n",
        "      <td>H06</td>\n",
-       "      <td>애프터 라이크</td>\n",
        "      <td>아이브</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -327,12 +323,10 @@
        "      <td>5</td>\n",
        "      <td>톰보이</td>\n",
        "      <td>H05</td>\n",
-       "      <td>톰보이</td>\n",
        "      <td>(여자)아이들</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -343,7 +337,6 @@
        "      <td>3834</td>\n",
        "      <td>미션 파서블</td>\n",
        "      <td>S05</td>\n",
-       "      <td>미션 파서블</td>\n",
        "      <td>반야</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -351,7 +344,6 @@
        "      <td>3835</td>\n",
        "      <td>마이 드림즈</td>\n",
        "      <td>S04</td>\n",
-       "      <td>마이 드림즈</td>\n",
        "      <td>반야 프로덕션</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -359,7 +351,6 @@
        "      <td>3836</td>\n",
        "      <td>알레그로 피유 모쏘</td>\n",
        "      <td>S04</td>\n",
-       "      <td>알레그로 피유 모쏘</td>\n",
        "      <td>DM Ashura</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -367,7 +358,6 @@
        "      <td>3837</td>\n",
        "      <td>아크 오브 다크니스</td>\n",
        "      <td>S02</td>\n",
-       "      <td>아크 오브 다크니스</td>\n",
        "      <td>이 얍</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -375,41 +365,240 @@
        "      <td>3838</td>\n",
        "      <td>제이 봉</td>\n",
        "      <td>S03</td>\n",
-       "      <td>제이 봉</td>\n",
        "      <td>반야</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3808 rows × 5 columns</p>\n",
+       "<p>3838 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      rank        song pattern     kr_song kr_composer\n",
-       "0        1     애프터 라이크     E01     애프터 라이크         아이브\n",
-       "1        2     애프터 라이크     N04     애프터 라이크         아이브\n",
-       "2        3         톰보이     N03         톰보이     (여자)아이들\n",
-       "3        4     애프터 라이크     H06     애프터 라이크         아이브\n",
-       "4        5         톰보이     H05         톰보이     (여자)아이들\n",
-       "...    ...         ...     ...         ...         ...\n",
-       "3833  3834      미션 파서블     S05      미션 파서블          반야\n",
-       "3834  3835      마이 드림즈     S04      마이 드림즈     반야 프로덕션\n",
-       "3835  3836  알레그로 피유 모쏘     S04  알레그로 피유 모쏘   DM Ashura\n",
-       "3836  3837  아크 오브 다크니스     S02  아크 오브 다크니스         이 얍\n",
-       "3837  3838        제이 봉     S03        제이 봉          반야\n",
+       "      rank        song pattern kr_composer\n",
+       "0        1     애프터 라이크     E01         아이브\n",
+       "1        2     애프터 라이크     N04         아이브\n",
+       "2        3         톰보이     N03     (여자)아이들\n",
+       "3        4     애프터 라이크     H06         아이브\n",
+       "4        5         톰보이     H05     (여자)아이들\n",
+       "...    ...         ...     ...         ...\n",
+       "3833  3834      미션 파서블     S05          반야\n",
+       "3834  3835      마이 드림즈     S04     반야 프로덕션\n",
+       "3835  3836  알레그로 피유 모쏘     S04   DM Ashura\n",
+       "3836  3837  아크 오브 다크니스     S02         이 얍\n",
+       "3837  3838        제이 봉     S03          반야\n",
        "\n",
-       "[3808 rows x 5 columns]"
+       "[3838 rows x 4 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "newest_df_copy = newest_df_copy.dropna()\n",
-    "\n",
     "newest_df_copy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Add a new column 'pattern_list' to songList_df with empty lists\n",
+    "\n",
+    "songList_df['pattern_list'] = [[] for _ in range(len(songList_df))]\n",
+    "songList_df['rank_list'] = [[] for _ in range(len(songList_df))]\n",
+    "# Step 2: Iterate through newest_df_copy and update 'pattern_list' in songList_df\n",
+    "for _, row in newest_df_copy.iterrows():\n",
+    "    # Find the index in songList_df where the song name matches\n",
+    "    index = songList_df[songList_df['song'] == row['song']].index\n",
+    "    \n",
+    "    # Append the pattern to the pattern_list of the matching song\n",
+    "    for i in index:\n",
+    "        songList_df.at[i, 'pattern_list'].append(row['pattern'])\n",
+    "        songList_df.at[i, 'rank_list'].append(row['rank'])\n",
+    "\n",
+    "# Verify the results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>song</th>\n",
+       "      <th>composer</th>\n",
+       "      <th>pattern_list</th>\n",
+       "      <th>rank_list</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>스테이저</td>\n",
+       "      <td>Ras</td>\n",
+       "      <td>[S17, S19, D20, D18, S15, D16, S11, C, D12, S08]</td>\n",
+       "      <td>[57, 58, 59, 109, 148, 174, 289, 364, 405, 714]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>리틀 먼치킨</td>\n",
+       "      <td>Castellia</td>\n",
+       "      <td>[S16, S19, D23, D20, S21, D17, D15, S13, S08, ...</td>\n",
+       "      <td>[89, 100, 101, 105, 120, 135, 173, 190, 330, 3...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>서든 어페어런스 이미지</td>\n",
+       "      <td>Blacklolita</td>\n",
+       "      <td>[S17, D23, S19, S21, D21, D17, S15, S13, S08]</td>\n",
+       "      <td>[98, 103, 112, 115, 121, 123, 162, 235, 666]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>톰보이</td>\n",
+       "      <td>(여자)아이들</td>\n",
+       "      <td>[N03, H05, V08, S08, S17, D22, S19, S05, D18, ...</td>\n",
+       "      <td>[3, 5, 15, 62, 87, 108, 132, 143, 145, 158, 18...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>사이먼 세이즈, 유로댄스!! (feat. Sara☆M)</td>\n",
+       "      <td>Jehezukiel☆KAZEMURA☆Hideky</td>\n",
+       "      <td>[S18, S20, S16, D22, D19, D13, S11, S07, S04]</td>\n",
+       "      <td>[90, 93, 99, 106, 110, 216, 265, 747, 1016]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>눈을 감아</td>\n",
+       "      <td>반야</td>\n",
+       "      <td>[S06]</td>\n",
+       "      <td>[3546]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>미운 오리 토카타</td>\n",
+       "      <td>반야 프로덕션</td>\n",
+       "      <td>[D18, S17]</td>\n",
+       "      <td>[3595, 3658]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541</th>\n",
+       "      <td>셋업 미투 믹스</td>\n",
+       "      <td>반야 프로덕션</td>\n",
+       "      <td>[S18]</td>\n",
+       "      <td>[3492]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>유니크 - SHORT CUT -</td>\n",
+       "      <td>SHK</td>\n",
+       "      <td>[D16, S18]</td>\n",
+       "      <td>[3550, 3701]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>파이널 오디션 3 - SHORT CUT -</td>\n",
+       "      <td>반야</td>\n",
+       "      <td>[S18, D18]</td>\n",
+       "      <td>[3606, 3736]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>544 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               song                    composer  \\\n",
+       "0                              스테이저                         Ras   \n",
+       "1                            리틀 먼치킨                   Castellia   \n",
+       "2                      서든 어페어런스 이미지                 Blacklolita   \n",
+       "3                               톰보이                     (여자)아이들   \n",
+       "4    사이먼 세이즈, 유로댄스!! (feat. Sara☆M)  Jehezukiel☆KAZEMURA☆Hideky   \n",
+       "..                              ...                         ...   \n",
+       "539                           눈을 감아                          반야   \n",
+       "540                       미운 오리 토카타                     반야 프로덕션   \n",
+       "541                        셋업 미투 믹스                     반야 프로덕션   \n",
+       "542               유니크 - SHORT CUT -                         SHK   \n",
+       "543         파이널 오디션 3 - SHORT CUT -                          반야   \n",
+       "\n",
+       "                                          pattern_list  \\\n",
+       "0     [S17, S19, D20, D18, S15, D16, S11, C, D12, S08]   \n",
+       "1    [S16, S19, D23, D20, S21, D17, D15, S13, S08, ...   \n",
+       "2        [S17, D23, S19, S21, D21, D17, S15, S13, S08]   \n",
+       "3    [N03, H05, V08, S08, S17, D22, S19, S05, D18, ...   \n",
+       "4        [S18, S20, S16, D22, D19, D13, S11, S07, S04]   \n",
+       "..                                                 ...   \n",
+       "539                                              [S06]   \n",
+       "540                                         [D18, S17]   \n",
+       "541                                              [S18]   \n",
+       "542                                         [D16, S18]   \n",
+       "543                                         [S18, D18]   \n",
+       "\n",
+       "                                             rank_list  \n",
+       "0      [57, 58, 59, 109, 148, 174, 289, 364, 405, 714]  \n",
+       "1    [89, 100, 101, 105, 120, 135, 173, 190, 330, 3...  \n",
+       "2         [98, 103, 112, 115, 121, 123, 162, 235, 666]  \n",
+       "3    [3, 5, 15, 62, 87, 108, 132, 143, 145, 158, 18...  \n",
+       "4          [90, 93, 99, 106, 110, 216, 265, 747, 1016]  \n",
+       "..                                                 ...  \n",
+       "539                                             [3546]  \n",
+       "540                                       [3595, 3658]  \n",
+       "541                                             [3492]  \n",
+       "542                                       [3550, 3701]  \n",
+       "543                                       [3606, 3736]  \n",
+       "\n",
+       "[544 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sort pattern_list and rank_list accordingly. Sorting order: E N H V S D C\n",
+    "def sort_pattern_rank_lists(pattern_list, rank_list):\n",
+    "\n",
+    "    pattern_list = [x for _, x in sorted(zip(rank_list, pattern_list))]\n",
+    "    rank_list.sort()\n",
+    "    return pattern_list, rank_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
